lab_3/policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  background: false
  rules:
    - name: name-and-team-labels
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kube-public, kube-node-lease, kyverno]
      validate:
        failureAction: Enforce
        message: "Нужны метки app.kubernetes.io/name и team (непустые)"
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
              team: "?*"
