lab_3/policies/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  background: false
  rules:
    - name: limits-cpu-memory
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kube-public, kube-node-lease, kyverno]
      validate:
        failureAction: Enforce
        message: "У каждого контейнера должны быть resources.limits.cpu и resources.limits.memory"
        pattern:
          spec:
            =(initContainers):
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
            containers:
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
